1. admin 项目添加默认消费者

--- a/xxl-mq-admin/src/main/resources/application.properties
+++ b/xxl-mq-admin/src/main/resources/application.properties
@@ -13,6 +13,11 @@ spring.freemarker.charset=UTF-8
 spring.freemarker.request-context-attribute=request
 spring.freemarker.settings.number_format=0.##########
 
+# xxl-mq, admin conf
+xxl.mq.admin.address=http://localhost:6888/xxl-mq-admin
+### xxl-mq, access token
+xxl.mq.accessToken=
+
 ### mybatis
 mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 
@@ -41,7 +46,7 @@ xxl.mq.registry.beattime=10
 xxl.mq.registry.accessToken=
 
 # xxl-mq, rpc conf
-xxl-mq.rpc.remoting.ip=
+xxl-mq.rpc.remoting.ip=localhost
 xxl-mq.rpc.remoting.port=7080
 
 ### xxl-mq, log conf
