--- a/xxl-mq-admin/pom.xml
+++ b/xxl-mq-admin/pom.xml
@@ -81,6 +81,12 @@
             <artifactId>xxl-mq-client</artifactId>
             <version>${parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
