--- a/clinbrain-mq-admin/pom.xml
+++ b/clinbrain-mq-admin/pom.xml
@@ -73,10 +73,9 @@
 
         <dependency>
             <groupId>com.clinbrain</groupId>
-            <artifactId>clinbrain-cloud-mq-common</artifactId>
+            <artifactId>clinbrain-mq-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
 
 
     </dependencies>
