--- a/clinbrain-mq-admin/src/main/resources/application.yml
+++ b/clinbrain-mq-admin/src/main/resources/application.yml
@@ -19,15 +19,33 @@ fuce:
   demo-enabled: false
   #漂亮得拖动验证码 默认false普通验证码、true滚动验证码
   roll-verification: false
-
-spring:
+#tomcat config
+server :
+  port : 8080
+  ##项目名字配置
+  #servlet :
+  #  context-path : /demo
+  tomcat :
+    uri-encoding : UTF-8
+    #shiro 报错修改的地方
+    max-connections: 200000
+    max-http-form-post-size: 9000000
+    threads:
+      max: 128
+      min-spare: 5
+spring :
+  # 环境 dev|test|prod
+  profiles :
+    active : dev
+    #引入其他配置文件，例如ftpHX 未配置文件application-ftpHX.yml
+    #include: ftpHX,ftpCloud
   servlet:
     multipart:
       #设置总上传的数据大小
       max-request-size: 100MB
       #单个文件大小
       maxFileSize : 30MB
-    #shiro 报错修改的地方
+        #shiro 报错修改的地方
     max-connections: 200000
     max-http-post-size: 9000000
   #热部署模块
@@ -53,6 +71,19 @@ spring:
   jackson:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
+  redis:
+    ssl: false
+    database: 0
+    host: 127.0.0.1
+    port: 6379
+    password: 
+    timeout: 1000
+    lettuce:
+      pool:
+        max-active: 200
+        max-wait: -1
+        max-idle: 10
+        min-idle: 0
 #mybatis:
 #  #配置mapper的扫描，找到所有的mapper.xml映射文件
 #  mapperLocations : classpath*:mybatis/*/*.xml
@@ -69,3 +100,11 @@ pagehelper:
     reasonable: true
     supportMethodsArguments: true
     params: count=countSql
+oss:
+  enable: true
+  info: true
+  path-style-access: false  #使用云OSS 需要关闭
+  endpoint: http://127.0.0.1:9000 #对应上图 ③ 处配置
+  access-key: minioadmin  # 上文创建的AK
+  secret-key: minioadmin # 上文创建的SK
+  bucket-name: mq-cloud  # 上文创建的桶名称
