--- a/clinbrain-mq-admin/pom.xml
+++ b/clinbrain-mq-admin/pom.xml
@@ -9,10 +9,10 @@
 	</parent>
     <groupId>com.clinbrain</groupId>
     <artifactId>clinbrain-mq-admin</artifactId>
+	<name>clinbrain-mq-admin</name>
     <version>1.0-SNAPSHOT</version>
-    <name>clinbrain-mq-admin</name>
 	<packaging>war</packaging>
-    <description>springboot-v2-pear</description>
+    <description>clinbrain mq admin</description>
 
     <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,9 +22,7 @@
 		<commons.io.version>2.5</commons.io.version>
 	</properties>
 
-    <!-- https://mvnrepository.com/ 查找jar网站 -->
 	<dependencies>
-	
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-data-redis</artifactId>
@@ -33,7 +31,6 @@
 		  <groupId>org.apache.commons</groupId>
 		  <artifactId>commons-pool2</artifactId>
 		</dependency>
-		
 		<!-- SpringBoot Web容器 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -88,7 +85,6 @@
 		 </dependency>
 		 -->
 		<!--druid 数据源监控-->
-		<!-- https://mvnrepository.com/artifact/com.alibaba/druid-spring-boot-starter -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid-spring-boot-starter</artifactId>
@@ -110,13 +106,11 @@
 			<artifactId>thymeleaf-extras-shiro</artifactId>
 			<version>2.0.0</version>
 		</dependency>
-
 		<!-- thymeleaf模版 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-
 		<!--常用工具类 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -127,7 +121,6 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.4</version>
 		</dependency>
-
 		<!--io常用工具类 -->
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -141,15 +134,12 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>${commons.fileupload.version}</version>
 		</dependency>
-
-
 		<!-- 热部署 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>false</optional>
 		</dependency>
-
 		<!-- Hutool是一个Java工具包 http://hutool.cn/ -->
 		<dependency>
 			<groupId>cn.hutool</groupId>
@@ -180,7 +170,6 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
-
 		<!-- mail -->
 		<dependency>
 		    <groupId>javax.mail</groupId>
@@ -205,7 +194,6 @@
 			<version>1.11.543</version>
 		</dependency>
 
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -218,7 +206,6 @@
 			<artifactId>clinbrain-mq-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-		
 	</dependencies>
 
     <build>
