--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 	<modules>
 		<module>clinbrain-mq-admin</module>
         <module>clinbrain-mq-common</module>
+        <module>clinbrain-mq-client</module>
     </modules>
 
 	<properties>
