1. 添加消息结构，整理项目结构

--- a/clinbrain-mq-common/pom.xml
+++ b/clinbrain-mq-common/pom.xml
@@ -12,12 +12,16 @@
     <artifactId>clinbrain-mq-common</artifactId>
 
     <dependencies>
-        <!-- rabbitmq -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.5</version>
+        </dependency>
 
     </dependencies>
 
