--- a/clinbrain-mq-admin/pom.xml
+++ b/clinbrain-mq-admin/pom.xml
@@ -217,8 +217,13 @@
 			<artifactId>aliyun-java-sdk-core</artifactId>
 			<version>4.5.16</version>
 		</dependency>
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
     <build>
 		<plugins>
