--- a/clinbrain-mq-admin/pom.xml
+++ b/clinbrain-mq-admin/pom.xml
@@ -20,12 +20,15 @@
 		<java.version>1.8</java.version>
 		<commons.fileupload.version>1.3.3</commons.fileupload.version>
 		<commons.io.version>2.5</commons.io.version>
+        <druid.version>1.2.8</druid.version>
+        <knife4j.version>3.0.3</knife4j.version>
+        <mybatis.pageHelper.version>1.4.1</mybatis.pageHelper.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-data-redis</artifactId>
+		    <artifactId>spring-boot-starter-cache</artifactId>
 		</dependency>
 		<dependency>
 		  <groupId>org.apache.commons</groupId>
@@ -37,11 +40,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<!-- SpringBoot集成mybatis框架 -->
-		<dependency>
+		<!--<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>1.3.2</version>
-		</dependency>
+			<version>${mybatis.version}</version>
+		</dependency>-->
         <!-- rabbitmq -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -57,7 +60,7 @@
 		<dependency>
 		    <groupId>com.github.xiaoymin</groupId>
 		    <artifactId>knife4j-spring-boot-starter</artifactId>
-		    <version>2.0.7</version>
+		    <version>${knife4j.version}</version>
 		</dependency>
 		<!--GSON -->
 		<dependency>
@@ -68,13 +71,13 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.68</version>
+            <version>1.2.78</version>
         </dependency>
 		<!-- pageHelper -->
 		<dependency>
 			<groupId>com.github.pagehelper</groupId>
 			<artifactId>pagehelper-spring-boot-starter</artifactId>
-			<version>1.2.5</version>
+			<version>${mybatis.pageHelper.version}</version>
 		</dependency>
 		<!-- mysql驱动7.0-->
 		<dependency>
@@ -89,17 +92,17 @@
 			<version>8.0.11</version>
 		 </dependency>
 		 -->
-		<!--druid 数据源监控-->
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>druid-spring-boot-starter</artifactId>
-			<version>1.2.6</version>
-		</dependency>
-		<!-- shiro权限 -->
+        <!-- https://mvnrepository.com/artifact/com.alibaba/druid-spring-boot-starter -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>${druid.version}</version>
+        </dependency>
+        <!-- shiro权限 -->
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-spring</artifactId>
-			<version>1.4.0</version>
+			<version>1.8.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -109,7 +112,7 @@
 		<dependency>
 			<groupId>com.github.theborakompanioni</groupId>
 			<artifactId>thymeleaf-extras-shiro</artifactId>
-			<version>2.0.0</version>
+			<version>2.1.0</version>
 		</dependency>
 		<!-- thymeleaf模版 -->
 		<dependency>
@@ -149,7 +152,7 @@
 		<dependency>
 			<groupId>cn.hutool</groupId>
 			<artifactId>hutool-all</artifactId>
-			<version>4.1.12</version>
+			<version>5.7.16</version>
 		</dependency>
 
 		<dependency>
@@ -182,28 +185,22 @@
 		    <version>1.4.7</version>
 		</dependency>
 		<!--quartz依赖-->
-		<dependency>
+		<!--<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
-		</dependency>
+		</dependency>-->
 		<!-- 验证码 -->
 		<dependency>
 		  <groupId>com.github.whvcse</groupId>
 		  <artifactId>easy-captcha</artifactId>
 		  <version>1.6.2</version>
 	   </dependency>
-		<!-- 亚马逊aws-s3 -->
-		<dependency>
-			<groupId>com.amazonaws</groupId>
-			<artifactId>aws-java-sdk-s3</artifactId>
-			<version>1.11.543</version>
-		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
-			<version>1.16.18</version>
+			<version>1.18.22</version>
 		</dependency>
 
 		<dependency>
@@ -212,16 +209,19 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.aliyun</groupId>
-			<artifactId>aliyun-java-sdk-core</artifactId>
-			<version>4.5.16</version>
-		</dependency>
         <dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
             <version>3.1</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>9.4.0.jre8</version>
+        </dependency>
+
 
     </dependencies>
 
