--- a/clinbrain-mq-admin/src/main/resources/auto_code/auto_code_config.properties
+++ b/clinbrain-mq-admin/src/main/resources/auto_code/auto_code_config.properties
@@ -13,14 +13,14 @@ globalConfig:
     #生成代码的项目路径
     parentPath: c:\\SpringBoot_v2
     #生成代码的父包 如父包是com.clinbrain.test.test  controller将在com.clinbrain.test.test.controller下 bean 将在com.clinbrain.test.test.bean下 ,service,dao同理
-    parentPack: com.clinbrain.v2
+    parentPack: com.clinbrain.mq
     #作者
-    author: fuce
+    author: clinbrain
     #电子邮箱
-    email: 115889198@qq.com
+    email:
     #java在项目中的classpath位置
     javaSource: src/main/java
     #resource位置
     resources: src/main/resources
     #表前缀
-    tablePrefix: t_
+    tablePrefix: u_
