--- a/clinbrain-mq-admin/src/main/resources/application.yml
+++ b/clinbrain-mq-admin/src/main/resources/application.yml
@@ -36,7 +36,7 @@ server :
 spring :
   # 环境 dev|test|prod
   profiles :
-    active : wuhan
+    active : linshu
     #引入其他配置文件，例如ftpHX 未配置文件application-ftpHX.yml
     #include: ftpHX,ftpCloud
   servlet:
