--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,10 @@
 	<artifactId>clinbrain-mq</artifactId>
 	<packaging>pom</packaging>
 	<name>clinbrain-mq</name>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.8</version>
 
 	<modules>
 		<module>clinbrain-mq-admin</module>
-        <module>clinbrain-mq-common</module>
     </modules>
 
 	<properties>
