1. 增加河北二院短信平台对接 2. 修改了烟台的对接,未测试 3. 修改了打包方式.config文件夹本意需要打包时候去掉.但是一直报错无法配置成功.先这样打包 4. mysql服务器通过配置host : clinbrain-mq-mysql 来连接

--- a/pom.xml
+++ b/pom.xml
@@ -26,4 +26,61 @@
 		<spring-boot.version>2.4.1</spring-boot.version>
 	</properties>
 
+    <profiles>
+        <profile>
+            <id>yantai</id>
+            <properties>
+                <activatedYml>yantai</activatedYml>
+            </properties>
+        </profile>
+        <profile>
+            <id>wuhan</id>
+            <properties>
+                <activatedYml>wuhan</activatedYml>
+            </properties>
+        </profile>
+        <profile>
+            <id>shiyan</id>
+            <properties>
+                <activatedYml>shiyan</activatedYml>
+            </properties>
+        </profile>
+        <profile>
+            <id>pengzhou</id>
+            <properties>
+                <activatedYml>pengzhou</activatedYml>
+            </properties>
+        </profile>
+        <profile>
+            <id>nanyang</id>
+            <properties>
+                <activatedYml>nanyang</activatedYml>
+            </properties>
+        </profile>
+        <profile>
+            <id>linshu</id>
+            <properties>
+                <activatedYml>linshu</activatedYml>
+            </properties>
+        </profile>
+        <profile>
+            <id>foshan11</id>
+            <properties>
+                <activatedYml>foshan11</activatedYml>
+            </properties>
+        </profile>
+        <profile>
+            <id>deyang</id>
+            <properties>
+                <activatedYml>deyang</activatedYml>
+            </properties>
+        </profile>
+        <profile>
+            <id>hebei2</id>
+            <properties>
+                <activatedYml>hebei2</activatedYml>
+            </properties>
+        </profile>
+    </profiles>
+
 </project>
