--- a/clinbrain-mq-admin/pom.xml
+++ b/clinbrain-mq-admin/pom.xml
@@ -213,11 +213,13 @@
 			<version>1.18.22</version>
 		</dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
         <dependency>
-            <groupId>commons-httpclient</groupId>
-            <artifactId>commons-httpclient</artifactId>
-            <version>3.1</version>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
         </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
         <dependency>
@@ -226,10 +228,34 @@
             <version>9.4.0.jre8</version>
         </dependency>
 
-
     </dependencies>
 
     <build>
+        <finalName>clinbrain-mq-${activatedYml}</finalName>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>application.yml</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <targetPath>${project.build.outputDirectory}</targetPath>
+                <filtering>true</filtering>
+                <includes>
+                    <include>application.yml</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources/config/</directory>
+                <targetPath>${project.build.outputDirectory}</targetPath>
+                <filtering>true</filtering>
+                <includes>
+                    <include>application-${activatedYml}.yml</include>
+                </includes>
+            </resource>
+        </resources>
 		<plugins>
 			<!-- JUnit 配置 -->
 			<plugin>
