--- a/clinbrain-mq-admin/src/main/resources/application.yml
+++ b/clinbrain-mq-admin/src/main/resources/application.yml
@@ -36,7 +36,7 @@ server :
 spring :
   # 环境 dev|test|prod
   profiles :
-    active : nanyang
+    active : @activatedYml@
     #引入其他配置文件，例如ftpHX 未配置文件application-ftpHX.yml
     #include: ftpHX,ftpCloud
   servlet:
@@ -76,7 +76,7 @@ spring :
     database: 0
     host: 127.0.0.1
     port: 6379
-    password: 
+    password:
     timeout: 1000
     lettuce:
       pool:
